--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,125 @@
-h1{
-  color: red;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+body, html{
+height:100vh;
+  width:100vw;
+  }
+
+main{
+  /* background-color: red; */
+  height: 100%;
+}
+nav{
+  display: flex;
+  justify-content:space-between;
+  text-align: center;
+  padding:20px 30px;
+}
+
+#drop-down-title{
+  cursor: pointer;
+}
+#drop-down-title-cont{
+  z-index:999;
+  background-color:white ;
+}
+#drop-down-cont{
+  display: flex;
+  flex-direction: column;
+  height: 0;
+}
+
+#drop-down-list{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+}
+.menu-active{
+  position: relative;
+  transform: translate(0,15%);
+  transition:transform 200ms ease;
+  animation: 300ms menu-fade-in ease;
+}
+
+.menu-inactive{
+  position: relative;
+  z-index: 1;
+  transform:translate(0,-30%);
+  transition:transform 200ms ease;
+  animation: 100ms menu-fade-out ease;
+  opacity:0
+}
+
+@keyframes menu-fade-out{
+0%{
+  opacity:1;
+ }
+50%{
+  opacity:.5;
+
+ }
+100%{
+  opacity:0;
+ }
+}
+
+@keyframes menu-fade-in{
+0%{
+  opacity:0;
+ }
+25%{
+  opacity:.3;
+ }
+50%{
+  opacity:.5;
+ }
+75%{
+  opacity:.7;
+ }
+100%{
+  opacity:1;
+ }
 }
