added a new css file and appended it so we can use the keyframes we made inside the Js file instead of the CSS

--- a/src/style.css
+++ b/src/style.css
@@ -93,9 +93,9 @@ nav{
   opacity:0
 }
 
-@keyframes menu-fade-out{
+/* @keyframes menu-fade-out{
 0%{
-  opacity:1;
+  opacity:1; 
  }
 50%{
   opacity:.5;
@@ -122,4 +122,4 @@ nav{
 100%{
   opacity:1;
  }
-}
+} */
