--- a/src/style.css
+++ b/src/style.css
@@ -52,29 +52,94 @@ main > div{
   height: 100%;
 }
 
+
+
+@keyframes fade-content {
+0%{
+  opacity: 1;
+}
+25%{
+  opacity: .5;
+}
+50%{
+  opacity:.2;
+}
+100%{
+  opacity:0;
+}
+}
+@keyframes compress-nav {
+0%{
+  gap:45px
+}
+25%{
+  gap:30px;
+}
+50%{
+ gap: 15px;
+}
+100%{
+  gap:0px;
+}
+}
+@keyframes expand-nav {
+0%{
+  gap:0px;
+}
+25%{
+  gap: 15px;
+}
+50%{
+  gap:30px;
+}
+100%{
+  gap:45px
+}
+}
+
 #rudder-item-list{
   background-color: #282828;
   color: #f9f5d7;
-  border-radius:40px;
+  font-size:2rem;
+  gap:60px;
 } 
 
+.left-rud-active,.right-rud-active{
+  display:flex;
+  gap: 60px;
+}
 
+.left-rud-inactive,.right-rud-inactive{
+  display:flex;
+  animation-name: compress-nav;
+  animation-duration: 100ms;
+  animation-fill-mode: forwards;
+  animation-name: fade-content;
+  animation-duration: 100ms;
+  animation-fill-mode: forwards;
+}
 
 .rudder-active{
   display: flex;
   align-items: center;
-  gap:60px;
-  padding:10px 35px;
-  transition:padding 150ms ease-in
+  padding:20px 35px;
+  border-radius:40px;
+  transition: border-radius 150ms ease-in ;
 }
 
 .rudder-inactive{
-  transition:padding 150ms ease-in;
-  padding: 10px 10px;
+  display:flex;
+  animation-name: compress-nav;
+  animation-duration: 100ms;
+  animation-fill-mode: forwards;
+  transition:padding 150ms ease-in ;
+  padding: 20px 35px;
+  border-radius: 40px;
 }
 
+
 #main-item{
-  font-size: 3rem;
+  font-weight:700;
 }
 nav{
   display: flex;
