--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,8 @@ main{
   width: 100%;
   flex-direction: column;
   background-color: var(--jet);
+  /* padding-left: 50px ; */
+  /* padding-right: 50px ; */
 }
 form{
   display: flex;  
@@ -117,10 +119,12 @@ header{
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: white;
 }
 
 #temperature{
   font-size: 5rem;
+  cursor:pointer;
 }
 
 
@@ -132,6 +136,6 @@ header{
 #weather-cont{
   padding: 2.5em 3.5em;
   background-color: var(--blue-yonder);
-  width: 50%;
+  min-width: 50%;
   height: 70%;
 }
