--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,7 @@ main{
   height: 100%;
   width: 100%;
   flex-direction: column;
-  background-color: var(--jet);
+  background-color: var(--blue-yonder);
   /* padding-left: 50px ; */
   /* padding-right: 50px ; */
 }
@@ -95,7 +95,6 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  outline: red 1px solid;
   padding:10px 20px;
 }
 
@@ -120,8 +119,12 @@ header{
   flex-direction: column;
   align-items: center;
   color: white;
+  gap: 10px;
 }
 
+#city{
+  font-size: 1.2rem;
+}
 #temperature{
   font-size: 5rem;
   cursor:pointer;
