--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,9 @@ header{
   justify-content: space-between;
   align-items: center;
   padding:10px 20px;
+  background-color: whitesmoke;
+  position: absolute;
+  width: 98%;
 }
 
 #logo{
@@ -129,7 +132,8 @@ header{
   padding: 2.5em 3.5em;
   background-color: var(--blue-yonder);
   margin: 0em 6em 0em 6em;
-  outline:  lime solid 1px;
+  margin-top: auto;
+  margin-bottom: 2em;
   gap: 20px;
 }
 
@@ -141,7 +145,7 @@ header{
   justify-content: center;
   padding: 2em 3em 2em 3em;
   background-color:blue;
-
+  gap: 20px;
 }
 
 #imp-details{
@@ -149,9 +153,34 @@ header{
   flex-direction: column;
   color: white;
   gap: 5px;
+}
+
+#detail-curr-cont{
   width: 50%;
   height:  519px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* outline: red solid 1px; */
+  color: white;
 }
+
+
+#upper-extra-inf{
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  gap: 10px;
+}
+#lower-extra-inf{
+  display: flex;
+  justify-content: space-between;
+}
+#lower-extra-inf p > span{
+  display: flex;
+  justify-content: center;
+}
+
 
 #current-hourly-chart{
   width: 50%;
@@ -173,7 +202,7 @@ header{
   align-items: center;
   background-color: black;
   color: white;
-  width: 50%;
-  /* flex: 1; */
+  flex: 1;
   height: 10em;
+  background-color: #3A3844;
 }
