--- a/src/style.css
+++ b/src/style.css
@@ -89,9 +89,8 @@ header{
   padding:10px 20px;
   position: absolute;
   width: 98%;
-  background-color: rgb(245, 245, 245, 0.5);
-  border-bottom: 2px solid var(--grey);
-  backdrop-filter: blur(10px);
+  background-color: rgb(245, 245, 245, 0.8);
+  /* border-bottom: 2px solid var(--grey); */
 }
 
 #logo{
@@ -207,13 +206,32 @@ p#description{
 }
 #daily-list-cont > li {
   display:flex;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
-  background-color: black;
-  color: white;
+  color: var(--mid-black);
   flex: 1;
   height: 10em;
-  background-color: #3A3844;
+  /* background-color: #3A3844; */
+  background-color: rgb(245, 245, 245, 0.7);
   border: 2px var(--mid-black) solid;
   border-radius: 10px;
+}
+
+#wed{
+  flex-direction: column;
+  gap: 10px;
+}
+
+li > h4{
+  font-size: 2rem;
+}
+
+li > p{
+  font-size: 1.3em;
+}
+li >div{
+  background-image: url('./resources/img/rain/cloud.png');
+  width: 50px;
+  height: 50px;
+  background-size: 50px 50px;
 }
