--- a/src/style.css
+++ b/src/style.css
@@ -226,9 +226,12 @@ li > h4{
 li > p{
   font-size: 1.3em;
 }
-li >div{
+/* li >div{ */
+/* } */
+.is-raining{
   background-image: url('./resources/img/rain/cloud.png');
   width: 50px;
   height: 50px;
   background-size: 50px 50px;
+
 }
