--- a/src/style.css
+++ b/src/style.css
@@ -270,7 +270,7 @@ li > div{
 }
 
 .is-clear-sky{
-  background-image: url('./resources/img/sunny/sun.png');
+  background-image: url('./resources/img/sunny/sun\ \(1\).png');
 } 
 .is-thunder-storm{
  background-image: url('./resources/img/thunderstorm/thunderstorm\(3\).png');
