--- a/src/style.css
+++ b/src/style.css
@@ -229,6 +229,7 @@ p#description{
   height:  100%;
   /* background-color: #3A3844; */
   /* border: 2px var(--mid-black) solid; */
+background-color: rgb(58,56,68,.5);
   border-radius: 10px;
   display: flex;
   justify-content: center;
