--- a/src/style.css
+++ b/src/style.css
@@ -86,11 +86,10 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding:10px 20px;
+  padding:10px 40px;
   position: absolute;
-  width: 98%;
+  width: 96%;
   background-color: rgb(245, 245, 245, 0.8);
-  /* border-bottom: 2px solid var(--grey); */
 }
 
 #logo{
@@ -117,7 +116,7 @@ header{
   margin: 0em 6em 0em 6em;
   margin-top: auto;
   margin-bottom: 5em;
-  gap: 20px;
+  gap: 70px;
   border-radius: 10px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
@@ -128,7 +127,7 @@ header{
   width: 80em;
   height: 100%;
   justify-content: space-between;
-  padding: 2em 3em 2em 3em;
+  /* padding: 2em 3em 2em 3em; */
   gap: 40px;
  }
 
@@ -164,7 +163,7 @@ header{
   content: '';
   background-image: url('./resources/img/arrow/arrow-up.png');
   background-size: 20px 20px;
-  width: 30px;
+
   height: 30px;
   background-position: center;
   background-repeat: no-repeat;
@@ -176,7 +175,7 @@ header{
   position: relative;
 }
 #min-temp::before{
-  position:absolute;
+  position:absolute; 
   content: '';
   background-image: url('./resources/img/arrow/arrow-up.png');
   background-size: 20px 20px;
@@ -251,7 +250,7 @@ background-color: rgb(58,56,68,.5);
   color: var(--mid-black);
   flex: 1;
   height: 10em;
-  background-color: rgb(245, 245, 245, 0.7);
+  background-color: rgb(245, 245, 245, 0.4);
   border: 2px var(--mid-black) solid;
   border-radius: 10px;
   flex-direction: column;
