--- a/src/style.css
+++ b/src/style.css
@@ -227,8 +227,6 @@ p#description{
 #current-hourly-chart{
   flex: 1;
   height:  100%;
-  /* background-color: #3A3844; */
-  /* border: 2px var(--mid-black) solid; */
 background-color: rgb(58,56,68,.5);
   border-radius: 10px;
   display: flex;
@@ -251,7 +249,7 @@ background-color: rgb(58,56,68,.5);
   color: var(--mid-black);
   flex: 1;
   height: 10em;
-  background-color: rgb(245, 245, 245, 0.4);
+  background-color: rgb(245, 245, 245, .8);
   border: 2px var(--mid-black) solid;
   border-radius: 10px;
   flex-direction: column;
